[package]
name = "flappy_nft"
version = "0.1.0"
description = "NFT Flappy Bird - Solana Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flappy_nft"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"

[profile.release]
overflow-checks = false
opt-level = 3
